VormerkService & VerleihService entkoppelt, #36 und #40 implementiert
VormerkServiceImpl und VerleihServiceImpl halten nichtmehr Referezen aufeinander, stattdessen muss bein Aufruf von bestimmten Methoden von vormerkService und VerleihService der jeweils andere Service übergeben werden, dies hätte sich auch durch eine Setter-Methode nach der Instanziierung eines Services realisieren lassen, das Downcasting eines Services in einen Subtyp sollte vermieden werden. Der "ausleihen"-Knopf in der Ausleih-Ansicht lässt sich nun nur betätigen, sofern alle Medien auch nach den Kriterien des Vormerkens ausgeliehen werden dürfen. Wird ein Medium, welches vorgemerkt war, ausgeliehen, so wird der erste Vormerker, der nun der Ausleiher ist, entfernt. Die restlichen Vormerker des Mediums rücken nach.